@@ -1,5 +1,6 @@
 Changes for templates:
 
+	* LOCK WAIT in an InnoDB transaction could cause an error (issue 91).
 	* The cache file name didn't include the MySQL port (issue 82).
 	* Added the -q option to the SSH command to quell missing homedir warnings.
 	* The --port option to the MySQL templates could not be null.
